--- a/front/static/index.html
+++ b/front/static/index.html
@@ -6,7 +6,7 @@
         <title>Oxfeed</title>
 
         <script type="module">
-            import init from "/wasm.js"
+            import init from "/oxfeed_front.js"
             init()
         </script>
 
