Changes favicon if unread item

--- a/front/static/index.html
+++ b/front/static/index.html
@@ -12,6 +12,7 @@
 
         <link href="/lib/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet" />
         <link href="/css/main.css" rel="stylesheet" />
+        <link rel="icon" href="/favicon.ico" />
     </head>
     <body>
     </body>
