[front] Fix missing favicon

--- a/front/index.html
+++ b/front/index.html
@@ -10,6 +10,7 @@
         <link data-trunk rel="icon" href="/static/favicon.ico" />
 
         <link data-trunk rel="copy-file" href="/static/1px.png" />
+        <link data-trunk rel="copy-file" href="/static/favicon.ico" />
         <link data-trunk rel="copy-file" href="/static/favicon-unread.ico" />
         <link data-trunk rel="copy-file" href="/static/lib/bootstrap-icons/bootstrap-icons.svg"/>
         <link data-trunk rel="copy-file" href="/static/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
