--- a/front/index.html
+++ b/front/index.html
@@ -12,6 +12,7 @@
         <link data-trunk rel="copy-file" href="/static/1px.png" />
         <link data-trunk rel="copy-file" href="/static/favicon.ico" />
         <link data-trunk rel="copy-file" href="/static/favicon-unread.ico" />
+        <link data-trunk rel="copy-file" href="/static/logo.png" />
         <link data-trunk rel="copy-file" href="/static/lib/bootstrap-icons/bootstrap-icons.svg"/>
         <link data-trunk rel="copy-file" href="/static/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
 
