Uses scss instead of css

--- a/front/index.html
+++ b/front/index.html
@@ -6,7 +6,7 @@
         <title>Oxfeed</title>
 
         <link data-trunk rel="css" href="/static/lib/bootstrap/dist/css/bootstrap.min.css" />
-        <link data-trunk rel="css" href="/static/css/main.css" />
+        <link data-trunk rel="scss" href="/static/css/main.scss" />
         <link data-trunk rel="icon" href="/static/favicon.ico" />
 
         <link data-trunk rel="copy-file" href="/static/1px.png" />
