--- a/front/index.html
+++ b/front/index.html
@@ -17,8 +17,7 @@
         <link data-trunk rel="copy-file" href="/static/lib/bootstrap-icons/bootstrap-icons.svg"/>
         <link data-trunk rel="copy-file" href="/static/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
 
-        <link data-trunk rel="rust" href="Cargo.toml" data-bin="event_bus" data-type="worker">
-        <link data-trunk rel="rust" href="Cargo.toml" data-bin="app" data-type="main">
+        <link data-trunk rel="rust" href="Cargo.toml" data-bin="oxfeed-front" data-type="main">
 
         <script src="/bootstrap.bundle.min.js"></script>
     </head>
