--- a/front/index.html
+++ b/front/index.html
@@ -3,16 +3,13 @@
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1">
+        <link rel="icon" href="" />
         <title>Oxfeed</title>
 
         <link data-trunk rel="css" href="/static/lib/bootstrap/dist/css/bootstrap.min.css" />
         <link data-trunk rel="scss" href="/static/css/main.scss" />
-        <link data-trunk rel="icon" href="/static/favicon.ico" />
 
         <link data-trunk rel="copy-file" href="/static/1px.png" />
-        <link data-trunk rel="copy-file" href="/static/favicon.ico" />
-        <link data-trunk rel="copy-file" href="/static/favicon-unread.ico" />
-        <link data-trunk rel="copy-file" href="/static/favicon-error.ico" />
         <link data-trunk rel="copy-file" href="/static/logo.png" />
         <link data-trunk rel="copy-file" href="/static/lib/bootstrap-icons/bootstrap-icons.svg"/>
         <link data-trunk rel="copy-file" href="/static/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
