Adds fallback favicon

--- a/front/index.html
+++ b/front/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1">
-        <link rel="icon" href="" />
+        <link data-trunk rel="icon" href="/static/lib/bootstrap-icons/icons/rss.svg" />
         <title>Oxfeed</title>
 
         <link data-trunk rel="css" href="/static/lib/bootstrap/dist/css/bootstrap.min.css" />
