Adds RSS for my subscriptions

--- a/front/index.html
+++ b/front/index.html
@@ -4,6 +4,7 @@
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1">
         <link data-trunk rel="icon" href="/static/lib/bootstrap-icons/icons/rss.svg" />
+        <link rel="alternate" type="application/rss+xml" title="RSS" />
         <title>Oxfeed</title>
 
         <link data-trunk rel="css" href="/static/lib/bootstrap/dist/css/bootstrap.min.css" />
